--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,11 @@ alprkeskin:
   consumed-urls:
     api: "https://openexchangerates.org/api/"
 
-api:
-  key: "8749ae82dbde4276a7554e13d03ad71e"
+query-parameter:
+  app_id: "8749ae82dbde4276a7554e13d03ad71e"
+  base: "USD"
+  prettyprint: "false"
+  show_alternative: "false"
 
 spring:
   data:
