--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,8 @@ alprkeskin:
   consumed-urls:
     api: "https://openexchangerates.org/api/"
 
-query-parameter:
-  app_id: "8749ae82dbde4276a7554e13d03ad71e"
-  base: "USD"
-  prettyprint: "false"
-  show_alternative: "false"
+api:
+  key: "8749ae82dbde4276a7554e13d03ad71e"
 
 spring:
   data:
