Adjustments on mongo database
- removed docker compose file
- removed unnecessary username and password from mongo database

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,8 +15,6 @@ spring:
   data:
     mongodb:
       authentication-database: admin
-      username: rootuser
-      password: rootpass
-      database: exchangeServiceDatabase
+      database: openExchangeServiceDatabase
       port: 27017
       host: localhost
